--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -38,6 +38,12 @@
             android:gravity="center_horizontal"
             android:text="Actualizado al" />
 
+        <TextView
+            android:id="@+id/mtextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
     </LinearLayout>
 
     <LinearLayout
