make json request and show an specific value

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,9 @@
         <item
             android:id="@+id/proyectos_priorizados"
             android:title="Proyectos Priorizados" />
+        <item
+            android:id="@+id/mapa"
+            android:title="Mapa" />
     </group>
 
 </menu>
