created object for json received and a personal method for the http request

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,9 @@
             android:title="Proyectos Priorizados" />
         <item
             android:id="@+id/mapa"
+            android:title="Mapa False" />
+        <item
+            android:id="@+id/maps"
             android:title="Mapa" />
     </group>
 
