--- a/app/src/main/res/layout/activity_mapa.xml
+++ b/app/src/main/res/layout/activity_mapa.xml
@@ -7,8 +7,10 @@
     tools:context="com.example.lupe.siin.MapaActivity">
 
     <WebView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/webview"
+        android:background="@color/colorAccent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
