tratando de hacer un fake verifier!

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,14 +36,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="Actualizado al 24/11/2017"
+            android:text="Actualizado al "
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/mtextView"
-            android:layout_width="match_parent"
+            android:id="@+id/mfecha"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"/>
+            android:gravity="center_horizontal|center"
+            android:text="Esperando datos..." />
 
     </LinearLayout>
 
@@ -101,7 +102,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/programado_devengado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=" 21.57 %" />
@@ -123,7 +124,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/reprogramado_devengado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="17.20 %" />
@@ -162,7 +163,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/presupuesto_aprobado_devengado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="62.08 %" />
@@ -184,7 +185,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView13"
+                    android:id="@+id/presupuesto_vigente_devengado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="55.56 %" />
@@ -248,7 +249,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView17"
+                    android:id="@+id/programado_pagado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="57.68 %" />
@@ -270,7 +271,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/reprogramado_pagado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="46.00 %" />
@@ -309,7 +310,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView22"
+                    android:id="@+id/presupuesto_aprobado_pagado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=" 60.87 %" />
@@ -331,7 +332,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView24"
+                    android:id="@+id/presupuesto_vigente_pagado"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="54.57 %" />
