--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -143,7 +143,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/titles"
-                android:text="Ejecución Mensual"
+                android:text="Ejecución Acumulada"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -158,7 +158,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/titles"
-                    android:text="Programado"
+                    android:text="Presupuesto Aprobado"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
 
@@ -180,7 +180,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/titles"
-                    android:text="Reprogramado"
+                    android:text="Presupuesto Vigente"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
 
@@ -290,7 +290,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/titles"
-                android:text="Ejecución Mensual"
+                android:text="Ejecución Acumulada"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -305,7 +305,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/titles"
-                    android:text="Programado"
+                    android:text="Presupuesto Aprobado"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
 
@@ -327,7 +327,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/titles"
-                    android:text="Reprogramado"
+                    android:text="Presupuesto Vigente"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
 
