Mapa con activity que muestra muchas opciones para los shapes con copia

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,9 @@
         <item
             android:id="@+id/maps"
             android:title="Mapa" />
+        <item
+            android:id="@+id/shapes"
+            android:title="Tramos" />
     </group>
 
 </menu>
