Shapes reales de una ruta de tarija en formato EPSG 4326

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,8 +20,11 @@
             android:id="@+id/maps"
             android:title="Mapa" />
         <item
+            android:id="@+id/shapes_old"
+            android:title="No entrar" />
+        <item
             android:id="@+id/shapes"
-            android:title="Tramos" />
+            android:title="Shapes" />
     </group>
 
 </menu>
