Google Maps y async task con sus metodos para recoger el json del de rutas de tarija.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,11 +20,11 @@
             android:id="@+id/maps"
             android:title="Mapa" />
         <item
-            android:id="@+id/shapes_old"
-            android:title="No entrar" />
+            android:id="@+id/ficha"
+            android:title="Ficha Tecnica" />
         <item
-            android:id="@+id/shapes"
-            android:title="Shapes" />
+            android:id="@+id/seguimiento"
+            android:title="Seguimiento" />
     </group>
 
 </menu>
