Añadiendo un map fragment activity con un info view personalizado, tambien un blank fragment solo contiene texto por defecto deberia remplazar el contenido, pero solo se añade a el. Nota: no olvidar añadir el fragment activity al manifest

--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lupe.siin.NavViewFragment">
+    tools:context="com.example.lupe.siin.BlankFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hi i am a fragment" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
