--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,9 @@
             android:id="@+id/maps"
             android:title="Mapa" />
         <item
+            android:id="@+id/mapsinfo"
+            android:title="Mapa Con Informacion Personalizada" />
+        <item
             android:id="@+id/ficha"
             android:title="Ficha Tecnica" />
         <item
