--- a/app/src/main/res/layout/activity_ficha.xml
+++ b/app/src/main/res/layout/activity_ficha.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.lupe.siin.FichaActivity">
 
     <WebView
-        android:id="@+id/webview"
+        android:id="@+id/webviewFicha"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
