ScreenSplash sin la imagen de backgroud!

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lupe.siin.SplashScreenActivity"
-    android:background="@drawable/svg_map"
     android:orientation="vertical"
-    android:paddingTop="48dp">
+    android:paddingTop="48dp"
+    tools:context="com.example.lupe.siin.SplashScreenActivity">
 
     <TextView
         android:id="@+id/tituloSplashScreen"
@@ -23,16 +21,17 @@
         android:id="@+id/logoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher_foreground"
         android:layout_gravity="center_horizontal"
-        android:minWidth="256dp"
+        android:contentDescription="@string/abc"
         android:minHeight="256dp"
-        android:scaleType="fitCenter"/>
+        android:minWidth="256dp"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/ic_launcher_foreground" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="¡Carreteras que integran Bolivian@s para vivir bien!"
+        android:text="@string/lemaAbc"
         android:textAlignment="center"
         android:textStyle="italic" />
 </LinearLayout>
