--- a/app/src/main/res/layout/info_window_form_fragment.xml
+++ b/app/src/main/res/layout/info_window_form_fragment.xml
@@ -9,52 +9,74 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/idTramo"
-        android:text="@string/infoWindowTextView"/>
+        android:text="@string/infoWindowTextView"
+        android:textAllCaps="true"
+        android:textColor="@color/colorAccent"
+        android:textSize="16dp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/objectid_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/idTramo"/>
+        android:layout_below="@id/idTramo"
+        android:text="Object id 1:" />
+
     <TextView
         android:id="@+id/objectid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/objectid_1"/>
+        android:layout_below="@id/objectid_1"
+        android:text="Object id:" />
+
     <TextView
         android:id="@+id/distancia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/objectid"/>
+        android:layout_below="@id/objectid"
+        android:text="Distancia:" />
+
     <TextView
         android:id="@+id/objectid_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/distancia"/>
+        android:layout_below="@id/distancia"
+        android:text="Object id 2:" />
+
     <TextView
         android:id="@+id/poblacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/objectid_2"/>
+        android:layout_below="@id/objectid_2"
+        android:text="Población:" />
+
     <TextView
         android:id="@+id/tramo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/poblacion"/>
+        android:layout_below="@id/poblacion"
+        android:text="Tramo:" />
+
     <TextView
         android:id="@+id/shapeLeng"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tramo"/>
+        android:layout_below="@id/tramo"
+        android:text="Shape Leng:" />
+
     <TextView
         android:id="@+id/proyId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/shapeLeng"/>
+        android:layout_below="@id/shapeLeng"
+        android:text="Proy id:" />
+
     <TextView
         android:id="@+id/idSubproyecto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/proyId"/>
+        android:layout_below="@id/proyId"
+        android:text="Id Subproyecto:" />
 
     <Button
         android:id="@+id/button1"
