--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="48dp"
     tools:context="com.example.lupe.siin.SplashScreenActivity">
+
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.45"
+        android:cropToPadding="true"
+        android:scaleType = "centerCrop"
+        android:contentDescription="@string/imagen_mapa_de_backbround"
+        app:srcCompat="@mipmap/croquis" />
 
     <TextView
         android:id="@+id/tituloSplashScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_margin="@dimen/title_text_margin"
         android:text="@string/abc"
         android:textAlignment="center"
         android:textSize="@dimen/textTitle"
+        android:textColor="#AA004c9a"
         tools:text="Administradora Boliviana de Carreteras" />
 
     <ImageView
         android:id="@+id/logoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/abc"
         android:minHeight="256dp"
@@ -29,9 +42,15 @@
         android:src="@mipmap/ic_launcher_foreground" />
 
     <TextView
+        android:id="@+id/lemaAbc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/logoImageView"
+        android:layout_marginTop="14dp"
         android:text="@string/lemaAbc"
         android:textAlignment="center"
+        android:textColor="#AA004c9a"
         android:textStyle="italic" />
-</LinearLayout>
+</RelativeLayout>
