--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="textTitle">32sp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="title_text_margin">24dp</dimen>
     <dimen name="marker_offset_x">5dp</dimen>
     <dimen name="marker_offset_y">39dp</dimen>
 </resources>
