--- a/app/src/main/res/layout/proyecto_list_item.xml
+++ b/app/src/main/res/layout/proyecto_list_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/listPreferredItemHeight"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingEnd="16dp"
         android:paddingLeft="16dp"
@@ -15,28 +16,48 @@
 
         <TextView
             android:id="@+id/proy_id"
-            android:layout_width="36dp"
+            android:layout_width="40dp"
             android:layout_height="36dp"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:textSize="14sp"
-            android:textStyle="bold"
+            android:textSize="16sp"
             tools:text="123" />
 
-        <TextView
-            android:id="@+id/proy_sisin"
-            android:layout_width="72dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"
-            tools:text="456 - 4564" />
-
-        <TextView
-            android:id="@+id/proy_descrip"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:text="yubore" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingLeft="8dp">
+
+            <TextView
+                android:id="@+id/proy_descrip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:text="Descripcion del proyecto" />
+
+            <TextView
+                android:id="@+id/proy_sisin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                tools:text="456 - 4564" />
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
